<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/trackingFragmentDetail"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvToolbarTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/detail_route"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="5dp"
        android:backgroundTint="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivTrackImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/track_snapshot"
                android:layout_margin="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/location"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/time"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/time"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_time"
                    app:layout_constraintStart_toEndOf="@id/location"
                    app:layout_constraintEnd_toStartOf="@+id/distance"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/distance"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_distance"
                    app:layout_constraintStart_toEndOf="@id/time"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvName"
                    android:layout_column="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/name_holder"
                    android:textColor="@color/md_blue_900"
                    app:layout_constraintStart_toStartOf="@+id/location"
                    app:layout_constraintEnd_toEndOf="@+id/location"
                    app:layout_constraintTop_toBottomOf="@id/location" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDate"
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/time_holder"
                    android:textColor="@color/md_blue_900"
                    app:layout_constraintStart_toStartOf="@+id/time"
                    app:layout_constraintEnd_toEndOf="@+id/time"
                    app:layout_constraintTop_toBottomOf="@id/time"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/distance_holder"
                    android:textColor="@color/md_blue_900"
                    app:layout_constraintStart_toStartOf="@+id/distance"
                    app:layout_constraintEnd_toEndOf="@+id/distance"
                    app:layout_constraintTop_toBottomOf="@id/distance"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray"
                android:layout_marginTop="10dp"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <ImageButton
                    android:id="@+id/btnShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_share"
                    android:background="@null"
                    android:layout_margin="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>
        </LinearLayout>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
